--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
 {erl_opts, [debug_info]}.
 
-{deps, [{meck, ".*", {git, "https://github.com/eproxus/meck.git", "master"}},
+{deps, [{meck, "0.8.2", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.2"} }},
         {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", "master"}}]}.
