--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 %% -*- mode: erlang;erlang-indent-level: 4;indent-tabs-mode: nil -*-
 {erl_opts, [debug_info]}.
 
-{deps, [{meck, ".*", {git, "https://github.com/eproxus/meck.git", "master"}},
+{deps, [{meck, ".*", {git, "https://github.com/tigertext/meck.git", {tag, "0.8.4"}}},
         {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", "master"}},
-        {lhttpc, ".*", {git, "git://github.com/talko/lhttpc", "master"}}
+        {lhttpc, ".*", {git, "git://github.com/tigertext/lhttpc", "master"}}
        ]}.
