--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
 {erl_opts, [debug_info]}.
 
 {deps, [{meck, ".*", {git, "https://github.com/eproxus/meck.git", "master"}},
-        {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", "master"}}]}.
+        {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", "d4b6d3dc5fd9e759ff7a0c476654ea5124f5bae9"}}]}.
